css/projects/69-love-songs/main.css
body {
  background-color: black;
}

#album-content, #lyrics-content {
  padding-top: 100px;
}

#shell {
  margin: 0 auto;
  width: 80%;
  max-width: 1080px;
}

#lyrics-content {
  display: none;
  grid-template-columns: 1fr 10fr 1fr;
  grid-gap: 15px;
  text-align: center;
  grid-template-areas:
          "prev home next"
          "song song song";
}

#home {
  display: none;
}

#albumInfo, #trackInfo {
  margin-bottom: 2rem;
  text-align: center;
}

#album-trackList, #track-lyrics {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-gap: 25px;
}

#volumes {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  text-align: center;
}

#volumes h1 {
  cursor: pointer;
  width: 50%;
  margin: 0 auto 25px;
}

#volumes h1:hover {
  border-bottom: 4px solid white;
}

.active {
  border-bottom: 4px solid white;
}

#album-trackList > a:hover, #track-lyrics > a:hover {
  background-color: #4cb9e2;
}

#album-cover {
  display: grid;
  place-items: center;
}

#album-cover img, #track-illustration img {
  width: 75%;
}

#album-volumes, #track-fullLyrics {
  height: 552px;
  overflow: scroll;
}

#album-track {
  display: grid;
  grid-template-columns: 1fr 7fr;
  grid-gap: 5px;

  cursor: pointer;
}

#track-fullLyrics {
  display: grid;
  grid-template-columns: 1fr;

  font-family: 'Roboto', sans-serif;
  font-size: 1rem;
  font-weight: 400;

  text-align: left;
  margin-block-end: 0rem;
  color: white;
}

#album-track p {
  font-family: 'Roboto', sans-serif;
  font-size: 1rem;
  font-weight: 400;

  text-align: left;
  margin-block-end: 0rem;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

#trackTitle {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

#album-track:hover {
  opacity: .5;
}

.in-progress {
  opacity: 50%;
  pointer-events: none;
  cursor: default;
}

h1, h2 {
  font-family: 'Roboto Mono', monospace;
  font-weight: 500;
  color: #efefef;
}

h1, h2, p {
  margin-block-start: 0rem;
  margin-block-end: 1.25rem;
}

h1 {
  font-size: 2rem;
  line-height: normal;
}

h2 {
  font-size: 1.15rem;
}

p {
  font-family: 'Roboto', sans-serif;
  font-size: 1.25rem;
  font-weight: 400;
  color: #efefef;
}

a {
  color: #ef785a;
  text-decoration: none;
}

a:hover {
  color: #4cb9e2;
  text-decoration: none;
}

#previous, #next {
  display: grid;
  place-items: center;
}

#previous { grid-area: prev; }
#next { grid-area: next; }

#lyrics-content button {
  width: 50px;
  height: 50px;
  background-color: rgba(0,0,0,1);
  border: none;
  color: white;
  font-size: 28px;
}

#lyrics-content button:hover {
  background-color: rgba(0,0,0,.5);
  cursor: pointer;
}

/* For screens that are 768px wide or less */
@media screen and (max-width: 1080px) {
  h1 { font-size: 2rem; }
  h2 { font-size: 1.5rem; }
  p  { font-size: 1.15rem; }
}

/* For screens that are 768px wide or less */
@media screen and (max-width: 980px) {
  #album-content, #lyrics-content {
    padding: 75px 0;
    width: 100%;
  }
  #lyrics-content {
    grid-template-columns: 1fr 10fr 1fr;
    grid-gap: 15px;
    text-align: center;
    grid-template-areas:
            "prev home next"
            "song song song";
  }
  #shell {
    margin: 0 auto;
    width: 450px;
  }
  #home {
    display: grid;
    grid-area: home;
    margin: auto;
  }
  #home img {
    width: 35px;
  }
  #lyrics-content > #shell { grid-area: song; }
  #album-volumes, #track-fullLyrics { height: 100%; }
  #album-trackList, #track-lyrics {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 35px;
  }
  #track-fullLyrics { text-align: center; }
  #album-cover img, #track-illustration img { width: 35%; }
  h1 { font-size: 1.75rem; }
  h2 { font-size: 1.25rem; }
  p { font-size: 1rem; }
}

/* For screens that are 425px wide or less */
@media screen and (max-width: 450px) {
  #shell {
    width: 80%;
  }
  #trackTitle {
    overflow: inherit;
    white-space: inherit;
    text-overflow: inherit;
  }
  h1 { font-size: 1.25rem; }
  h2 { font-size: 1rem; }
  p  { font-size: 1rem; }
}

